# masv-platform

./: .gitignore  LICENSE  README.md  environment.yml  main.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
ai_models/: gru_model_091025.pt
configs/: run_ekf.yaml  run_gru.yaml  run_ukf.yaml  simple_run.yaml
core_algorithms/: base_algorithm.py  factory.py  neural_ode.py  ukf.py
core_algorithms/EKF/: BaseEKF.py  simple_heading_ekf.py  simple_test_ekf.py
core_algorithms/GRU/: GRU_simple_report.md  config.py
core_algorithms/UKF/: ukf.py
core_algorithms/transformer_model/: transformer.py
data/sample_inputs/: dummy_gnss_imu.csv
data/sample_outputs/: dummy_data.csv  dummy_gnss_imu_ekf.csv
docker/: .env  Dockerfile  Dockerfile.dev  docker-compose.ci.yml  docker-compose.yml
docs/: sensor_fusion_design.md
model_viewer/: app.py  model_viewer_wx_env.yml  viewer.py
plugins/: base_node.py  csv_sink.py  csv_source.py
result_viewer/: app.py
ros2_ws/src/ros2_interface/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2_interface/ai_models_nodes/: ekf_node.py  gru_infer_node.py  ukf_node.py
ros2_ws/src/ros2_interface/config/: analysis_params.yaml  ekf_params.yaml  gnss_params.yaml  gru_params.yaml  imu_params.yaml  log_replay_params.yaml  ukf_params.yaml
ros2_ws/src/ros2_interface/interface_nodes/: analysis_node.py  ekf_node.py  log_replay_node.py  sensor_node.py
ros2_ws/src/ros2_interface/launch/: gru_infer_launch.py  simulation_launch.py
ros2_ws/src/ros2_interface/test/: test_gru_launch.py
scripts/: dataset_conv.py
(+20 files in other folders)
